--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,11 @@ body {
     height: 200px;
 }
 
+.container{
+max-width: 800px;
+margin: 0 auto;
+color: #7e7ed2;
+font-family: sans-serif;
+padding-left: 20px;
+padding-right: 20px;
+        }
